NetBSD Problem Report #53292

From martin@aprisoft.de  Wed May 16 09:13:42 2018
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 025E57A103
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 16 May 2018 09:13:41 +0000 (UTC)
Message-Id: <20180516091330.453405CC8BC@emmas.aprisoft.de>
Date: Wed, 16 May 2018 11:13:30 +0200 (CEST)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: uefi boot countdown is invisible
X-Send-Pr-Version: 3.95

>Number:         53292
>Category:       port-i386
>Synopsis:       uefi boot countdown is invisible
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-i386-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed May 16 09:15:00 +0000 2018
>Closed-Date:    Tue May 22 18:23:54 +0000 2018
>Last-Modified:  Tue May 22 18:23:54 +0000 2018
>Originator:     Martin Husemann
>Release:        NetBSD 8.99.17
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD seven-days-to-the-wolves.aprisoft.de 8.99.17 NetBSD 8.99.17 (GENERIC) #220: Thu May 10 09:07:57 CEST 2018 martin@seven-days-to-the-wolves.aprisoft.de:/work/src/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:

The uefi boot (e.g. on install images) shows a countdown untill the
default option is chosen. This countdown is invisible though. The screen
displays a static:

 Option ... will be chosen in #

(where # marks the cursor), no updates happen, and after a while the option
is chosen.

>How-To-Repeat:

Boot the uefi install image

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@kollasch.net>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-i386/53292: uefi boot countdown is invisible
Date: Wed, 16 May 2018 14:22:06 -0500

 I need to check more carefully for details, but it seems that this
 either does or does not occur depending on the UEFI implementation in
 question.

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-i386/53292: uefi boot countdown is invisible
Date: Wed, 16 May 2018 21:26:47 +0200

 On Wed, May 16, 2018 at 07:25:01PM +0000, Jonathan A. Kollasch wrote:
 >  I need to check more carefully for details, but it seems that this
 >  either does or does not occur depending on the UEFI implementation in
 >  question.

 I see it both in Virtualbox and on an Acer Aspire V - whatever that is
 worth.

 Martin

From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53292 CVS commit: src/sys/arch/i386/stand/efiboot
Date: Wed, 16 May 2018 19:53:54 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Wed May 16 19:53:54 UTC 2018

 Modified Files:
 	src/sys/arch/i386/stand/efiboot: eficons.c

 Log Message:
 During awaitkey(), move the cursor back to the beginning of the
 countdown with '\b' only after waiting.

 Some UEFI implementations have a destructive/erasing backspace,
 and will not show the countdown if we move the cursor back before the
 wait.

 My ThinkPad T430 w/ Lenovo's UEFI exhibited this whiteout-backspace,
 while my Gigabyte Brix GB-BXBT-2807 did not.

 Should fix PR #53292.


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/sys/arch/i386/stand/efiboot/eficons.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53292 CVS commit: [netbsd-8] src/sys/arch/i386/stand/efiboot
Date: Tue, 22 May 2018 17:43:22 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue May 22 17:43:21 UTC 2018

 Modified Files:
 	src/sys/arch/i386/stand/efiboot [netbsd-8]: eficons.c

 Log Message:
 Pull up following revision(s) (requested by jakllsch in ticket #831):

 	sys/arch/i386/stand/efiboot/eficons.c: revision 1.6

 During awaitkey(), move the cursor back to the beginning of the
 countdown with '\b' only after waiting.

 Some UEFI implementations have a destructive/erasing backspace,
 and will not show the countdown if we move the cursor back before the
 wait.

 My ThinkPad T430 w/ Lenovo's UEFI exhibited this whiteout-backspace,
 while my Gigabyte Brix GB-BXBT-2807 did not.

 Should fix PR #53292.


 To generate a diff of this commit:
 cvs rdiff -u -r1.4.2.1 -r1.4.2.2 src/sys/arch/i386/stand/efiboot/eficons.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: maya@NetBSD.org
State-Changed-When: Tue, 22 May 2018 18:23:54 +0000
State-Changed-Why:
Fixed, pulled up (by martin, original reporter - so likely fixed for him too)


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.